{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 38,
  "lineage": "a58b6f27-0f85-dd7d-abc1-3e03878e1d89",
  "resources": [
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173230496266:security-group/sg-0d67096a060a64fb2",
            "description": "Lambda egress-only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d67096a060a64fb2",
            "ingress": [],
            "name": "prod-tienda-sg-lambda",
            "name_prefix": "",
            "owner_id": "173230496266",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "prod-tienda-sg-lambda"
            },
            "tags_all": {
              "Name": "prod-tienda-sg-lambda"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f81a9d6ab660a069"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.tienda"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173230496266:security-group/sg-04cdd61a4a7e06079",
            "description": "MySQL 3306 desde SG Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cdd61a4a7e06079",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL desde Lambda",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d67096a060a64fb2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "prod-tienda-sg-rds2",
            "name_prefix": "",
            "owner_id": "173230496266",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "prod-tienda-sg-rds2"
            },
            "tags_all": {
              "Name": "prod-tienda-sg-rds2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f81a9d6ab660a069"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.lambda",
            "module.vpc.aws_vpc.tienda"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173230496266:internet-gateway/igw-0b8d8d46d491dbb56",
            "id": "igw-0b8d8d46d491dbb56",
            "owner_id": "173230496266",
            "tags": {
              "Name": "prod-tienda-igw"
            },
            "tags_all": {
              "Name": "prod-tienda-igw"
            },
            "vpc_id": "vpc-0f81a9d6ab660a069"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.tienda"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173230496266:route-table/rtb-027b93e2009fd2f3e",
            "id": "rtb-027b93e2009fd2f3e",
            "owner_id": "173230496266",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-tienda-rt-private"
            },
            "tags_all": {
              "Name": "prod-tienda-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f81a9d6ab660a069"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.tienda"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173230496266:route-table/rtb-01d915aed524495fc",
            "id": "rtb-01d915aed524495fc",
            "owner_id": "173230496266",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8d8d46d491dbb56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-tienda-rt-public"
            },
            "tags_all": {
              "Name": "prod-tienda-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f81a9d6ab660a069"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.tienda"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097cf89cc686bcdd2",
            "route_table_id": "rtb-027b93e2009fd2f3e",
            "subnet_id": "subnet-04ab47b55c542c16b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_vpc.tienda",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffb3bf0a58bd5160",
            "route_table_id": "rtb-027b93e2009fd2f3e",
            "subnet_id": "subnet-02d926f1a5cb390b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.tienda",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173230496266:subnet/subnet-04ab47b55c542c16b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ab47b55c542c16b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173230496266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-tienda-private-a"
            },
            "tags_all": {
              "Name": "prod-tienda-private-a"
            },
            "vpc_id": "vpc-0f81a9d6ab660a069"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.tienda",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173230496266:subnet/subnet-02d926f1a5cb390b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d926f1a5cb390b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "173230496266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-tienda-private-b"
            },
            "tags_all": {
              "Name": "prod-tienda-private-b"
            },
            "vpc_id": "vpc-0f81a9d6ab660a069"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.tienda",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173230496266:subnet/subnet-08172ffd5e2be6a94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08172ffd5e2be6a94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "173230496266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-tienda-public-a"
            },
            "tags_all": {
              "Name": "prod-tienda-public-a"
            },
            "vpc_id": "vpc-0f81a9d6ab660a069"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.tienda",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173230496266:subnet/subnet-0cfc574ee66573857",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfc574ee66573857",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "173230496266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-tienda-public-b"
            },
            "tags_all": {
              "Name": "prod-tienda-public-b"
            },
            "vpc_id": "vpc-0f81a9d6ab660a069"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.tienda",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tienda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:173230496266:vpc/vpc-0f81a9d6ab660a069",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8c69efc4c80f1e0",
            "default_route_table_id": "rtb-0b23b40a614714524",
            "default_security_group_id": "sg-04ec5a0c583839790",
            "dhcp_options_id": "dopt-060ecb14aaf323fdd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f81a9d6ab660a069",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b23b40a614714524",
            "owner_id": "173230496266",
            "tags": {
              "Name": "prod-tienda-vpc"
            },
            "tags_all": {
              "Name": "prod-tienda-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}